[project]
name = "email-triage-rl"
version = "1.0.0"
description = "RL-based email triage system using OpenEnv"
authors = [
    { name = "Prachi Kumari" },
    { name = "Aamrin Islam" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

# ✅ IMPORTANT: proper script entry
[project.scripts]
start = "server.app:app"

[tool.setuptools]
packages = ["."]